--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
       <div class="menu-burger">
         <input type="checkbox" id="menu__toggle"/>
-        <label class="menu-burger__btn" for="menu-burger__toggle">
+        <label class="menu-burger__btn" for="menu__toggle">
           <span></span>
         </label>
       </div>
