--- a/index.html
+++ b/index.html
@@ -37,62 +37,67 @@
     </section>
     <section class="products">
       <h1 class="products__title">Featured product</h1>
-      <div class="products-item">
-        <img src="" alt="" class="products-item__img">
-        <p class="products-item__name">Atlas Black/Rasta Axion</p>
-        <p class="products-item__cost">$89.00</p>
-        <div class="products-item__colors">
-          <span class="products-item__colors_1"></span>
-          <span class="products-item__colors_2"></span>
-          <span class="products-item__colors_3"></span>
-          <span class="products-item__colors_4"></span>
+      <div class="products-wrapper">
+        <div class="products-item">
+          <img src="img/prod-1-min.png" alt="" class="products-item__img">
+          <p class="products-item__name">Atlas Black/Rasta Axion</p>
+          <p class="products-item__cost">$89.00</p>
+          <div class="products-item__colors">
+            <span class="products-item__colors_1"></span>
+            <span class="products-item__colors_2"></span>
+            <span class="products-item__colors_3"></span>
+            <span class="products-item__colors_4"></span>
+          </div>
+        </div>
+        <div class="products-item">
+          <img src="img/prod-2-min.png" alt="" class="products-item__img">
+          <p class="products-item__name">Camel/Chili Pepper Axion</p>
+          <p class="products-item__cost">$74.00</p>
+          <div class="products-item__colors">
+            <span class="products-item__colors_1"></span>
+            <span class="products-item__colors_2"></span>
+            <span class="products-item__colors_3"></span>
+            <span class="products-item__colors_4"></span>
+          </div>
+        </div>
+        <div class="products-item">
+          <img src="img/prod-3-min.png" alt="" class="products-item__img">
+          <p class="products-item__name">Mandel Smoke/Rust Axion</p>
+          <p class="products-item__cost">$69.00</p>
+          <div class="products-item__colors">
+            <span class="products-item__colors_1"></span>
+            <span class="products-item__colors_2"></span>
+            <span class="products-item__colors_3"></span>
+            <span class="products-item__colors_4"></span>
+          </div>
+        </div>
+        <div class="products-item">
+          <img src="img/prod-4-min.png" alt="" class="products-item__img">
+          <p class="products-item__name">Cloud/Electric Blue Axion</p>
+          <p class="products-item__cost">$69.00</p>
+          <div class="products-item__colors">
+            <span class="products-item__colors_1"></span>
+            <span class="products-item__colors_2"></span>
+            <span class="products-item__colors_3"></span>
+            <span class="products-item__colors_4"></span>
+          </div>
         </div>
       </div>
-      <div class="products-item">
-        <img src="" alt="" class="products-item__img">
-        <p class="products-item__name">Camel/Chili Pepper Axion</p>
-        <p class="products-item__cost">$74.00</p>
-        <div class="products-item__colors">
-          <span class="products-item__colors_1"></span>
-          <span class="products-item__colors_2"></span>
-          <span class="products-item__colors_3"></span>
-          <span class="products-item__colors_4"></span>
-        </div>
-      </div>
-      <div class="products-item">
-        <img src="" alt="" class="products-item__img">
-        <p class="products-item__name">Mandel Smoke/Rust Axion</p>
-        <p class="products-item__cost">$69.00</p>
-        <div class="products-item__colors">
-          <span class="products-item__colors_1"></span>
-          <span class="products-item__colors_2"></span>
-          <span class="products-item__colors_3"></span>
-          <span class="products-item__colors_4"></span>
-        </div>
-      </div>
-      <div class="products-item">
-        <img src="" alt="" class="products-item__img">
-        <p class="products-item__name">Cloud/Electric Blue Axion</p>
-        <p class="products-item__cost">$69.00</p>
-        <div class="products-item__colors">
-          <span class="products-item__colors_1"></span>
-          <span class="products-item__colors_2"></span>
-          <span class="products-item__colors_3"></span>
-          <span class="products-item__colors_4"></span>
-        </div>
-      </div>
-      
     </section>
     <main class="main">
-      <img src="" alt="" class="main__img">
-      <div class="play-button">
-        <span class="play-button__triangle"></span>
+      <div class="player-wrapper">
+        <img src="img/main-img-min.png" alt="" class="main__img">
+        <div class="play-button">
+          <span class="play-button__triangle"></span>
+        </div>
       </div>
-      <h1 class="main__title">Legendary footwear reborn</h1>
-      <p class="main__text">
-        We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.
-      </p>
-      <a href="" class="main__link">Learn more</a>
+      <div class="main-wrapper">
+        <h1 class="main__title">Legendary footwear reborn</h1>
+        <p class="main__text">
+          We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.
+        </p>
+        <a href="" class="main__link">Learn more</a>
+      </div>
     </main>
     <section class="stories">
       <h1 class="stories__title">Recent stories</h1>
