Сделал стили историй и галереи.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="stories">
       <h1 class="stories__title">Recent stories</h1>
       <div class="stories-item">
-        <img src="" alt="" class="stories-item__img">
+        <img src="img/stories-1-min.png" alt="" class="stories-item__img">
         <h2 class="stories-item__title">Presents Justin Anagoa</h2>
         <p class="stories-item__text">
           Anagoa’s been a part of the skater’s family ever since his early teenage years. He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa lives his day-to-day, to see what makes Anagoa tick.
@@ -111,17 +111,17 @@
         <p class="stories-item__date">11.08.2018</p>
       </div>
       <div class="stories-item">
-        <img src="" alt="" class="stories-item__img">
+        <img src="img/stories-2-min.png" alt="" class="stories-item__img">
         <h2 class="stories-item__title">First Frontside flip</h2>
         <p class="stories-item__text">
-          Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day. 
+          Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.<br/>
           Photo:Yoon Sul
         </p>
         <a href="" class="stories-item__link">Learn more</a>
         <p class="stories-item__date">17.08.2018</p>
       </div>
       <div class="stories-item">
-        <img src="" alt="" class="stories-item__img">
+        <img src="img/stories-3-min.png" alt="" class="stories-item__img">
         <h2 class="stories-item__title">Kevin Baekkel is Pro</h2>
         <p class="stories-item__text">
           Creature proudly announced today that they’re officially adding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years Thrasher King of the Road, and constantly lighting every spot he hits on fire.
@@ -131,14 +131,15 @@
       </div>
     </section>
     <section class="gallery">
-      <h1 class="gallery__title">#AXIONfootwear</h1>
-      <img src="" alt="" class="gallery__img">
-      <img src="" alt="" class="gallery__img">
-      <img src="" alt="" class="gallery__img">
-      <img src="" alt="" class="gallery__img">
-      <img src="" alt="" class="gallery__img">
-      <img src="" alt="" class="gallery__img">
-      <img src="" alt="" class="gallery__img">
+      <h1 class="gallery__title">#Axionfootwear</h1>
+      <img src="img/gallery-1-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-2-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-3-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-4-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-5-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-6-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-7-min.png" alt="" class="gallery__img">
+      <img src="img/gallery-1-min.png" alt="" class="gallery__img">
     </section>
   </div>
   <footer class="footer">
